# serializer version: 1
# name: test_compile[YAMLConfigFile-20240323]
  '''
  {'notes': [{'areas': ['gtd'],
              'body': ' #gtd pomodoro',
              'child_notes': [],
              'contexts': ['pomodoro'],
              'create_date': FakeDate(2000, 1, 3),
              'links': [],
              'next_note': None,
              'parent_note': None,
              'people': [],
              'prev_note': None,
              'projects': [],
              'properties': {'p': '1'}},
             {'areas': ['own'],
              'body': ' #own Buy rubber duck',
              'child_notes': [],
              'contexts': ['pomodoro'],
              'create_date': FakeDate(2000, 1, 3),
              'links': [],
              'next_note': None,
              'parent_note': None,
              'people': [],
              'prev_note': None,
              'projects': [],
              'properties': {'p': '2'}},
             {'areas': [],
              'body': ' +zorg Parametrize test_run_compile()',
              'child_notes': [],
              'contexts': ['pomodoro'],
              'create_date': FakeDate(2000, 1, 3),
              'links': [],
              'next_note': None,
              'parent_note': None,
              'people': [],
              'prev_note': None,
              'projects': ['zorg'],
              'properties': {'p': '2'}},
             {'areas': [],
              'body': ' +zorg Move models.py and file_groups.py',
              'child_notes': [],
              'contexts': ['pomodoro'],
              'create_date': FakeDate(2000, 1, 3),
              'links': [],
              'next_note': None,
              'parent_note': None,
              'people': [],
              'prev_note': None,
              'projects': ['zorg'],
              'properties': {'p': '3'}},
             {'areas': [],
              'body': ' +zorg Add links to grammar',
              'child_notes': [],
              'contexts': ['pomodoro'],
              'create_date': FakeDate(2000, 1, 3),
              'links': [],
              'next_note': None,
              'parent_note': None,
              'people': [],
              'prev_note': None,
              'projects': ['zorg'],
              'properties': {'p': '3'}},
             {'areas': [],
              'body': ' +zorg Fix grammar so it works with this file',
              'child_notes': [],
              'contexts': ['pomodoro'],
              'create_date': FakeDate(2000, 1, 3),
              'links': [],
              'next_note': None,
              'parent_note': None,
              'people': [],
              'prev_note': None,
              'projects': ['zorg'],
              'properties': {'p': '4'}},
             {'areas': [],
              'body': ' +zorg Add this file to test data',
              'child_notes': [],
              'contexts': ['pomodoro'],
              'create_date': FakeDate(2000, 1, 3),
              'links': [],
              'next_note': None,
              'parent_note': None,
              'people': [],
              'prev_note': None,
              'projects': ['zorg'],
              'properties': {'p': '5'}},
             {'areas': [],
              'body': ' +zorg Filter out all numeric tag names',
              'child_notes': [],
              'contexts': ['pomodoro'],
              'create_date': FakeDate(2000, 1, 3),
              'links': [],
              'next_note': None,
              'parent_note': None,
              'people': [],
              'prev_note': None,
              'projects': ['zorg'],
              'properties': {'p': '5'}},
             {'areas': [],
              'body': ' +zorg Test against all examples/ files',
              'child_notes': [],
              'contexts': ['pomodoro'],
              'create_date': FakeDate(2000, 1, 3),
              'links': [],
              'next_note': None,
              'parent_note': None,
              'people': [],
              'prev_note': None,
              'projects': ['zorg'],
              'properties': {'p': '6'}},
             {'areas': [],
              'body': " +zorg wip: Replace 'john@' with '%john'",
              'child_notes': [],
              'contexts': ['pomodoro'],
              'create_date': FakeDate(2000, 1, 3),
              'links': [],
              'next_note': None,
              'parent_note': None,
              'people': [],
              'prev_note': None,
              'projects': ['zorg'],
              'properties': {'p': '6'}},
             {'areas': [],
              'body': ' +laundry dry whites',
              'child_notes': [],
              'contexts': ['pomodoro'],
              'create_date': FakeDate(2000, 1, 3),
              'links': [],
              'next_note': None,
              'parent_note': None,
              'people': [],
              'prev_note': None,
              'projects': ['laundry'],
              'properties': {'p': '7'}},
             {'areas': [],
              'body': ' +zorg wip: migrate people',
              'child_notes': [],
              'contexts': ['pomodoro'],
              'create_date': FakeDate(2000, 1, 3),
              'links': [],
              'next_note': None,
              'parent_note': None,
              'people': [],
              'prev_note': None,
              'projects': ['zorg'],
              'properties': {'p': '7'}},
             {'areas': [],
              'body': " +zorg Finished 'john@' to '%john' migration",
              'child_notes': [],
              'contexts': ['pomodoro'],
              'create_date': FakeDate(2000, 1, 3),
              'links': [],
              'next_note': None,
              'parent_note': None,
              'people': [],
              'prev_note': None,
              'projects': ['zorg'],
              'properties': {'p': '8'}},
             {'areas': [],
              'body': ' +zorg Updated grammar to handle quotes',
              'child_notes': [],
              'contexts': ['pomodoro'],
              'create_date': FakeDate(2000, 1, 3),
              'links': [],
              'next_note': None,
              'parent_note': None,
              'people': [],
              'prev_note': None,
              'projects': ['zorg'],
              'properties': {'p': '9'}},
             {'areas': [],
              'body': ' +laundry wip: fold darks',
              'child_notes': [],
              'contexts': ['pomodoro'],
              'create_date': FakeDate(2000, 1, 3),
              'links': [],
              'next_note': None,
              'parent_note': None,
              'people': [],
              'prev_note': None,
              'projects': ['laundry'],
              'properties': {'p': '10'}},
             {'areas': [],
              'body': ' +laundry fold darks',
              'child_notes': [],
              'contexts': ['pomodoro'],
              'create_date': FakeDate(2000, 1, 3),
              'links': [],
              'next_note': None,
              'parent_note': None,
              'people': [],
              'prev_note': None,
              'projects': ['laundry'],
              'properties': {'p': '11'}},
             {'areas': [],
              'body': ' +laundry wash delicates',
              'child_notes': [],
              'contexts': ['pomodoro'],
              'create_date': FakeDate(2000, 1, 3),
              'links': [],
              'next_note': None,
              'parent_note': None,
              'people': [],
              'prev_note': None,
              'projects': ['laundry'],
              'properties': {'p': '12'}},
             {'areas': [],
              'body': ' +zorg [[xmind/zorg_e2e_query_arch.xmind]]',
              'child_notes': [],
              'contexts': ['pomodoro'],
              'create_date': FakeDate(2000, 1, 3),
              'links': ['xmind/zorg_e2e_query_arch.xmind'],
              'next_note': None,
              'parent_note': None,
              'people': [],
              'prev_note': None,
              'projects': ['zorg'],
              'properties': {'p': '14'}}],
   'todos': []}
  
  '''
# ---
# name: test_compile[YAMLConfigFile-basic]
  '''
  {'notes': [{'areas': [],
              'body': ' First note in first block',
              'child_notes': [],
              'contexts': [],
              'create_date': FakeDate(2000, 1, 3),
              'links': [],
              'next_note': None,
              'parent_note': None,
              'people': [],
              'prev_note': None,
              'projects': [],
              'properties': {}},
             {'areas': [],
              'body': ' Second note in first block',
              'child_notes': [],
              'contexts': [],
              'create_date': FakeDate(2000, 1, 3),
              'links': [],
              'next_note': None,
              'parent_note': None,
              'people': [],
              'prev_note': None,
              'projects': [],
              'properties': {}}],
   'todos': [{'areas': [],
              'body': ' bazbuz is ok too...',
              'child_notes': [],
              'contexts': [],
              'create_date': FakeDate(2000, 1, 3),
              'done_date': None,
              'links': [],
              'next_note': None,
              'parent_note': None,
              'people': [],
              'prev_note': None,
              'priority': 'C',
              'projects': [],
              'properties': {},
              'status': <TodoStatus.OPEN: 1>}]}
  
  '''
# ---
# name: test_compile[YAMLConfigFile-links]
  '''
  {'notes': [{'areas': [],
              'body': ' Some note with a [[bar.sh]] link to a bash script.',
              'child_notes': [],
              'contexts': [],
              'create_date': FakeDate(2000, 1, 3),
              'links': ['bar.sh'],
              'next_note': None,
              'parent_note': None,
              'people': [],
              'prev_note': None,
              'projects': [],
              'properties': {}},
             {'areas': [],
              'body': ' Some note with a link in parens (see [[baz]]).',
              'child_notes': [],
              'contexts': [],
              'create_date': FakeDate(2000, 1, 3),
              'links': ['baz'],
              'next_note': None,
              'parent_note': None,
              'people': [],
              'prev_note': None,
              'projects': [],
              'properties': {}},
             {'areas': [],
              'body': ' Some note with a link in parens and a block-level link '
                      '([[buz::fuzz]]).',
              'child_notes': [],
              'contexts': [],
              'create_date': FakeDate(2000, 1, 3),
              'links': ['buz::fuzz'],
              'next_note': None,
              'parent_note': None,
              'people': [],
              'prev_note': None,
              'projects': [],
              'properties': {'buz': 'fuzz'}}],
   'todos': []}
  
  '''
# ---
# name: test_compile[YAMLConfigFile-multiblocks]
  '''
  {'notes': [{'areas': [],
              'body': ' A note about life...',
              'child_notes': [],
              'contexts': [],
              'create_date': FakeDate(2000, 1, 3),
              'links': [],
              'next_note': None,
              'parent_note': None,
              'people': [],
              'prev_note': None,
              'projects': [],
              'properties': {}},
             {'areas': [],
              'body': ' With a note',
              'child_notes': [],
              'contexts': [],
              'create_date': FakeDate(2000, 1, 3),
              'links': [],
              'next_note': None,
              'parent_note': None,
              'people': [],
              'prev_note': None,
              'projects': [],
              'properties': {}},
             {'areas': [],
              'body': ' Note A1',
              'child_notes': [],
              'contexts': [],
              'create_date': FakeDate(2000, 1, 3),
              'links': [],
              'next_note': None,
              'parent_note': None,
              'people': [],
              'prev_note': None,
              'projects': [],
              'properties': {}},
             {'areas': [],
              'body': ' Note A2',
              'child_notes': [],
              'contexts': [],
              'create_date': FakeDate(2000, 1, 3),
              'links': [],
              'next_note': None,
              'parent_note': None,
              'people': [],
              'prev_note': None,
              'projects': [],
              'properties': {}},
             {'areas': [],
              'body': ' Note B',
              'child_notes': [],
              'contexts': [],
              'create_date': FakeDate(2000, 1, 3),
              'links': [],
              'next_note': None,
              'parent_note': None,
              'people': [],
              'prev_note': None,
              'projects': [],
              'properties': {}},
             {'areas': [],
              'body': ' Note C',
              'child_notes': [],
              'contexts': [],
              'create_date': FakeDate(2000, 1, 3),
              'links': [],
              'next_note': None,
              'parent_note': None,
              'people': [],
              'prev_note': None,
              'projects': [],
              'properties': {}},
             {'areas': [],
              'body': ' Note D',
              'child_notes': [],
              'contexts': [],
              'create_date': FakeDate(2000, 1, 3),
              'links': [],
              'next_note': None,
              'parent_note': None,
              'people': [],
              'prev_note': None,
              'projects': [],
              'properties': {}},
             {'areas': [],
              'body': ' Note E',
              'child_notes': [],
              'contexts': [],
              'create_date': FakeDate(2000, 1, 3),
              'links': [],
              'next_note': None,
              'parent_note': None,
              'people': [],
              'prev_note': None,
              'projects': [],
              'properties': {}}],
   'todos': [{'areas': [],
              'body': ' Some todo',
              'child_notes': [],
              'contexts': [],
              'create_date': FakeDate(2000, 1, 3),
              'done_date': None,
              'links': [],
              'next_note': None,
              'parent_note': None,
              'people': [],
              'prev_note': None,
              'priority': 'C',
              'projects': [],
              'properties': {},
              'status': <TodoStatus.OPEN: 1>},
             {'areas': [],
              'body': ' Another related todo',
              'child_notes': [],
              'contexts': [],
              'create_date': FakeDate(2000, 1, 3),
              'done_date': None,
              'links': [],
              'next_note': None,
              'parent_note': None,
              'people': [],
              'prev_note': None,
              'priority': 'C',
              'projects': [],
              'properties': {},
              'status': <TodoStatus.OPEN: 1>},
             {'areas': [],
              'body': ' Some other todo',
              'child_notes': [],
              'contexts': [],
              'create_date': FakeDate(2000, 1, 3),
              'done_date': None,
              'links': [],
              'next_note': None,
              'parent_note': None,
              'people': [],
              'prev_note': None,
              'priority': 'C',
              'projects': [],
              'properties': {},
              'status': <TodoStatus.OPEN: 1>}]}
  
  '''
# ---
# name: test_compile[YAMLConfigFile-priority]
  '''
  {'notes': [],
   'todos': [{'areas': [],
              'body': ' 2024-03-13 High Priority TODO',
              'child_notes': [],
              'contexts': [],
              'create_date': FakeDate(2000, 1, 3),
              'done_date': None,
              'links': [],
              'next_note': None,
              'parent_note': None,
              'people': [],
              'prev_note': None,
              'priority': 'A',
              'projects': [],
              'properties': {},
              'status': <TodoStatus.OPEN: 1>},
             {'areas': [],
              'body': ' 2024-03-13 Medium Priority TODO',
              'child_notes': [],
              'contexts': [],
              'create_date': FakeDate(2000, 1, 3),
              'done_date': None,
              'links': [],
              'next_note': None,
              'parent_note': None,
              'people': [],
              'prev_note': None,
              'priority': 'B',
              'projects': [],
              'properties': {},
              'status': <TodoStatus.OPEN: 1>},
             {'areas': [],
              'body': ' 2024-03-13 Low Priority TODO',
              'child_notes': [],
              'contexts': [],
              'create_date': FakeDate(2000, 1, 3),
              'done_date': None,
              'links': [],
              'next_note': None,
              'parent_note': None,
              'people': [],
              'prev_note': None,
              'priority': 'C',
              'projects': [],
              'properties': {},
              'status': <TodoStatus.OPEN: 1>}]}
  
  '''
# ---
# name: test_compile[YAMLConfigFile-property]
  '''
  {'notes': [{'areas': [],
              'body': ' This note contains a key::value pair.',
              'child_notes': [],
              'contexts': [],
              'create_date': FakeDate(2000, 1, 3),
              'links': [],
              'next_note': None,
              'parent_note': None,
              'people': [],
              'prev_note': None,
              'projects': [],
              'properties': {'key': 'value', 'p': '1'}}],
   'todos': [{'areas': [],
              'body': ' This todo is @due today! | due::2024-03-13',
              'child_notes': [],
              'contexts': ['due'],
              'create_date': FakeDate(2000, 1, 3),
              'done_date': None,
              'links': [],
              'next_note': None,
              'parent_note': None,
              'people': [],
              'prev_note': None,
              'priority': 'C',
              'projects': [],
              'properties': {'due': '2024-03-13', 'p': '1'},
              'status': <TodoStatus.OPEN: 1>}]}
  
  '''
# ---
# name: test_compile[YAMLConfigFile-subsections]
  '''
  {'notes': [{'areas': [],
              'body': ' Note about A1',
              'child_notes': [],
              'contexts': [],
              'create_date': FakeDate(2000, 1, 3),
              'links': [],
              'next_note': None,
              'parent_note': None,
              'people': [],
              'prev_note': None,
              'projects': [],
              'properties': {}},
             {'areas': [],
              'body': ' Note about something',
              'child_notes': [],
              'contexts': [],
              'create_date': FakeDate(2000, 1, 3),
              'links': [],
              'next_note': None,
              'parent_note': None,
              'people': [],
              'prev_note': None,
              'projects': [],
              'properties': {}},
             {'areas': [],
              'body': ' Another note',
              'child_notes': [],
              'contexts': [],
              'create_date': FakeDate(2000, 1, 3),
              'links': [],
              'next_note': None,
              'parent_note': None,
              'people': [],
              'prev_note': None,
              'projects': [],
              'properties': {}},
             {'areas': [],
              'body': ' A note on the second section.',
              'child_notes': [],
              'contexts': [],
              'create_date': FakeDate(2000, 1, 3),
              'links': [],
              'next_note': None,
              'parent_note': None,
              'people': [],
              'prev_note': None,
              'projects': [],
              'properties': {}},
             {'areas': [],
              'body': ' A sub-note.',
              'child_notes': [],
              'contexts': [],
              'create_date': FakeDate(2000, 1, 3),
              'links': [],
              'next_note': None,
              'parent_note': None,
              'people': [],
              'prev_note': None,
              'projects': [],
              'properties': {}},
             {'areas': [],
              'body': ' And another note.',
              'child_notes': [],
              'contexts': [],
              'create_date': FakeDate(2000, 1, 3),
              'links': [],
              'next_note': None,
              'parent_note': None,
              'people': [],
              'prev_note': None,
              'projects': [],
              'properties': {}},
             {'areas': [],
              'body': ' This is inside of h4_section!',
              'child_notes': [],
              'contexts': [],
              'create_date': FakeDate(2000, 1, 3),
              'links': [],
              'next_note': None,
              'parent_note': None,
              'people': [],
              'prev_note': None,
              'projects': [],
              'properties': {}},
             {'areas': [],
              'body': ' A note on the third section.',
              'child_notes': [],
              'contexts': [],
              'create_date': FakeDate(2000, 1, 3),
              'links': [],
              'next_note': None,
              'parent_note': None,
              'people': [],
              'prev_note': None,
              'projects': [],
              'properties': {}},
             {'areas': [],
              'body': ' A sub-note.',
              'child_notes': [],
              'contexts': [],
              'create_date': FakeDate(2000, 1, 3),
              'links': [],
              'next_note': None,
              'parent_note': None,
              'people': [],
              'prev_note': None,
              'projects': [],
              'properties': {}},
             {'areas': [],
              'body': ' And another note.',
              'child_notes': [],
              'contexts': [],
              'create_date': FakeDate(2000, 1, 3),
              'links': [],
              'next_note': None,
              'parent_note': None,
              'people': [],
              'prev_note': None,
              'projects': [],
              'properties': {}},
             {'areas': [],
              'body': ' This is the final section!',
              'child_notes': [],
              'contexts': [],
              'create_date': FakeDate(2000, 1, 3),
              'links': [],
              'next_note': None,
              'parent_note': None,
              'people': [],
              'prev_note': None,
              'projects': [],
              'properties': {}}],
   'todos': [{'areas': [],
              'body': ' A todo for something',
              'child_notes': [],
              'contexts': [],
              'create_date': FakeDate(2000, 1, 3),
              'done_date': None,
              'links': [],
              'next_note': None,
              'parent_note': None,
              'people': [],
              'prev_note': None,
              'priority': 'C',
              'projects': [],
              'properties': {},
              'status': <TodoStatus.OPEN: 1>},
             {'areas': [],
              'body': ' Some foobar todo.',
              'child_notes': [],
              'contexts': [],
              'create_date': FakeDate(2000, 1, 3),
              'done_date': None,
              'links': [],
              'next_note': None,
              'parent_note': None,
              'people': [],
              'prev_note': None,
              'priority': 'C',
              'projects': [],
              'properties': {},
              'status': <TodoStatus.OPEN: 1>},
             {'areas': [],
              'body': ' Some foobar todo.',
              'child_notes': [],
              'contexts': [],
              'create_date': FakeDate(2000, 1, 3),
              'done_date': None,
              'links': [],
              'next_note': None,
              'parent_note': None,
              'people': [],
              'prev_note': None,
              'priority': 'C',
              'projects': [],
              'properties': {},
              'status': <TodoStatus.OPEN: 1>}]}
  
  '''
# ---
# name: test_compile[YAMLConfigFile-tags]
  '''
  {'notes': [{'areas': [],
              'body': ' Some note',
              'child_notes': [],
              'contexts': [],
              'create_date': FakeDate(2000, 1, 3),
              'links': [],
              'next_note': None,
              'parent_note': None,
              'people': [],
              'prev_note': None,
              'projects': ['foobar'],
              'properties': {}},
             {'areas': ['thoughts'],
              'body': ' When I talk to %pig I always want to @puke.',
              'child_notes': [],
              'contexts': ['puke'],
              'create_date': FakeDate(2000, 1, 3),
              'links': [],
              'next_note': None,
              'parent_note': None,
              'people': ['pig'],
              'prev_note': None,
              'projects': ['foobar', 'bazbuz'],
              'properties': {}}],
   'todos': []}
  
  '''
# ---
